--- a/bin/cicd/cicd-common.properties
+++ b/bin/cicd/cicd-common.properties
@@ -1,6 +1,6 @@
 # Container Image info
 image_registry=docker.io
-image_project=mandarine04
+image_project=happykube
 image_repository=mvp-sample-springboot
 image_tag=0.0.1
 
@@ -24,13 +24,13 @@ readiness_success_threshold=1
 readiness_failure_threshold=5
 
 # namespace, sa
-namespace=shnoh
+namespace=hklee
 serviceaccount=default
 
 # Service info
 service_target_port=1001
 service_port=1001
-service_host=shnoh.mvp-sample-springboot.169.56.70.205.nip.io
+service_host=hklee.mvp-sample-springboot.169.56.70.205.nip.io
 service_replicas=1
 
 image_pull_policy=IfNotPresent
